syntax = "proto3";

option java_package = "ca.berlingoqc.growbe_android_module.proto";

enum AlarmZone {
	UNKNOW = 0;
	MIDDLE = 1;
	VERY_LOW = 2;
	LOW = 3;
	HIGH = 4;
	VERY_HIGH = 5;
}

message AlarmZoneValue {
	float value = 1;
	float offset = 2;
}

message FieldAlarm {
	string moduleId = 1;
	string property = 2;
	AlarmZoneValue veryLow = 3;
	AlarmZoneValue low = 4;
	AlarmZoneValue high = 5;
	AlarmZoneValue veryHigh = 6;
}


message FieldAlarmEvent {
	string moduleId = 1;
	string property = 2;

	AlarmZone previousZone = 3;
	AlarmZone currentZone = 4;

	float currentValue = 5;
	float previousValue = 6;

    uint32 changedAt = 7;
}

